syntax = "proto3";

package classification_service;

option go_package = "gen/classification_service/golang";

message GetTextCategoryRequest {
	string text = 1;
	repeated string labels = 2;
}

message GetTextCategoryResponse {
	string category = 1;
}

service Classification {
	rpc GetTextCategory(GetTextCategoryRequest) returns (GetTextCategoryResponse);
}
